# nbody

./: Cargo.toml
src/: main.rs  nbody.wgsl  nbody_cpu.rs  nbody_gpu.rs  nbody_gpu_bh.rs  nbodybh.wgsl  octree.rs  octree_maxdepth.rs  trace.wgsl
